readable_test/typer/failing/TestVar1.grading.amy
object TestVar1 
var i : Int(32) = true
end TestVar1